intermediatefiles v1